Fix overflowing text in drag and drop quizzes (#3741)

--- a/src/main/webapp/app/exercises/quiz/shared/questions/drag-and-drop-question/drag-and-drop-question.component.scss
+++ b/src/main/webapp/app/exercises/quiz/shared/questions/drag-and-drop-question/drag-and-drop-question.component.scss
@@ -133,10 +133,9 @@
 
                             span {
                                 border: none;
-                                padding: 0;
                                 vertical-align: middle;
                                 display: inline-block;
-                                white-space: nowrap;
+                                font-size: 1rem;
                             }
                         }
                     }
